[package]
name = "rust-retro-basic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["fs", "macros", "io-util", "rt"] }